Testimonies: fix contrast

--- a/src/views/Testimonies.scss
+++ b/src/views/Testimonies.scss
@@ -193,7 +193,7 @@ figure.testimonial {
     font-style: normal;
     font-size: 1rem;
     font-weight: 300;
-    color: #99999e;
+    // color: #99999e;
     line-height: 1.1em;
   }
 
